--- a/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
@@ -65,7 +65,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat"
-            android:text="Center: Appolo Medicals"
+            android:text="ICare Medicals Pvt.Ltd"
             android:textColor="@color/bg_white"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/cardView12"
