--- a/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
@@ -26,7 +26,7 @@
             android:fontFamily="@font/montserrat_medium"
             android:text="Dr. Chris Evans"
             android:textColor="@color/bg_white"
-            android:textSize="28sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
             android:fontFamily="@font/montserrat"
             android:text="Specialist Eye care"
             android:textColor="@color/bg_white"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/cardView11"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat"
             android:text="Location"
             android:textColor="@color/bg_white"
@@ -137,13 +137,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView11"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="32dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:alpha="0.5"
-            app:cardBackgroundColor="@color/bg_lightgreen"
-            app:cardCornerRadius="50dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -159,7 +158,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/baseline_done_all_24" />
+                    app:srcCompat="@drawable/qrcode" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
